Endret slide i presentasjonen

--- a/presentasjon_problemstilling/presentasjon_problemstilling.tex
+++ b/presentasjon_problemstilling/presentasjon_problemstilling.tex
@@ -81,13 +81,13 @@
     \item[$\bullet$] Energibevaring: $c\rho_0\frac{\partial T}{\partial \tau} =
       -\div{q} + \displaystyle\sum\limits_{i} h_i I_i -
       \displaystyle\sum\limits_{i} j_i c_i {\gv\nabla} T$
-    \item[$\bullet$] Varmelikning: $\frac{\partial u}{\partial \tau} = \alpha
-      {\gv\nabla}^2 u$
+    \item[$\bullet$] ( varmelikning: $\frac{\partial T}{\partial \tau} = \alpha
+      {\gv\nabla}^2 T$ )
     \item[$\bullet$] \vspace{10pt} Størrelser:
       \begin{itemize}
 	\item $q = -\lambda {\gv \nabla } T$, $\lambda$ effektiv varmeledning
-	\item $u_i$ masseinnholdet av damp (vann) i stoff $i$ (f.eks. kjøtt, fett)
-	\item $j_i$ massestrømningstetthet for stoff $i$
+	\item $u_i$ masseinnholdet av vann/fett i stoff $i$
+	\item $j_i$ massestrømtetthet for stoff $i$
 	\item $I_i$ kilder og sluk pga. faseoverganger, $\displaystyle\sum\limits_{i} I_i = 0$
 	\item $h_i$ varmen (termisk energi) i stoff $i$
 	\item $c_i = \frac{\partial h_i}{\partial T}$ (varmekapasitet)
