Mer presentasjon av gruppemedlemmer

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -1,23 +1,66 @@
 \chapter{Presentasjon av gruppens medlemmer}
 \person{Åsmund}
-Åsmund går i 4.klasse på studieretningen Teknisk Fysikk, med fordypning i
-matematisk fysikk. MiA var hans førstevalg fordi han driver mye med numerikk, og
-han syns at matematikk er spennende. Åsmund har jobbet med numerikk og fysikk
-på sin forrige sommerjobb, og han tar mer numerikk dette semesteret. I tillegg
-gjør hans gode generelle kompetanse i fysikk at han er godt skikket til å finne de
-riktige differensiallikningene som beskriver det fysiske systemet som skal
-studeres.
+Åsmund går i 4.klasse på studieretningen Teknisk Fysikk, med fordypning 
+i matematisk fysikk. Åsmund har jobbet med numerikk og fysikk på sin forrige 
+sommerjobb, og i tillegg gjør hans gode generelle kompetanse i fysikk at han 
+er godt skikket til å finne de riktige differensiallikningene som beskriver 
+det fysiske systemet som skal studeres.
+
+\subsection*{Innstilling til gruppearbeid}
+Åsmund har hatt både positive og negative erfaringer med gruppearbeid tidligere.
+Han har merket seg at de gruppene han har negative erfaringer fra ofte har hatt
+medlemmer som ikke har vært motiverte for arbeidsoppgaven. Dette har delvis
+motivert hans valg av MiA som landsby, da han tror at de som velger MiA er
+innstilte på å gjøre en god jobb.
+
+\subsection*{Gruppa om Åsmund}
 
 Åsmund er \ldots
 
 \person{Joakim}
-\lipsum[1-2] %Lorem ipsum
+Jeg studerer sivilingeniør Bygg- og miljøteknikk, med
+spesialiseringen innenfor konstruksjonsteknikk og beregningsmekanikk. Fra før
+har jeg erfaring med teamarbeid gjennom førsteklassefaget Fysisk
+Miljøplanlegging, som på lik linje med EiT hadde en prosjektrapport og
+prosessrapport som evalueringsform.
+
+\subsection*{Innstilling til gruppearbeid}
+
+Jeg liker å jobbe etter klare og veldefinerte problemer. Likevel
+er jeg en stor tilhenger av en situasjonsbetinget lederstruktur, hvor gruppen
+tilpasser seg underveis i arbeidet. På den måten, mener jeg, at hvert
+gruppemedlem blir tildelt den rollen som faller han/hun naturlig, der og da. 
+
+Fra før har jeg hatt ett rent prosjektfag, der var gruppen preget av
+homogenitet, da samtlige var fra samme linje. Det er derfor ekstra spennende og
+jobbe i en såpass heterogen gruppe, med hhv. en fysiker (Åsmund), programmerer
+(Knut), numeriker (Turid), statistiker (Paul) og meg (konstruktør). Jeg har
+utelukkende gode erfaringer med gruppearbeid, da jeg føler at jeg yter mer når
+andre er avhengig av jobben jeg gjør, og vice versa.
+
+Min posisjon i gruppa er mindre selvsagt enn de resterende medlemmene. Da jeg har generell
+kunnskap om de fleste disipliner, har de inngående kunnskap i hvert sitt felt.
+Slik at jeg har tatt litt del i det meste, noe jeg liker godt. Jeg prøver derfor
+å legge til rette for et godt gruppemiljø, da jeg anser det som vel så viktig.
+
+\subsection*{Gruppa om Joakim}
+
+%\subsection*{Grunnlag for landsbyvalg og forventninger til EiT}
+
+%\subsection*{Påvirker forventninger og kompetanse gruppearbeidet?}
+
+%\subsection*{Personlige forutsetninger}
 
 \person{Turid}
 \lipsum[3-4]
 
 \person{Paul}
-\lipsum[5-6]
+Paul går i 4.klasse på studieretningen fysikk og matematikk, med spesialising i statistikk. Han har erfaring fra gruppearbeid fra prosjektoppgaver i statistikk, numerikk og matematisk modellering.
+
+\subsection*{Innstilling til gruppearbeid}
+Paul liker å ha oversikt over arbeidsoppgaver og at gruppa har en framdriftsplan. Han er nøye med det han gjør, og står på når han har fått en konkret arbeidsoppgave. Han er flink til å lytte til andres meninger, og kommer på ting som han kan bidra med i gruppa.
+
+\subsection*{Gruppa om Paul}
 
 \person{Knut Halvor}
 \lipsum[7-8]
