--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -1,10 +1,9 @@
-@Book{schwarz,
- author    = "Roger {Schwarz}",
- title     = "The Skilled Facilitator: A Comprehensive Resource for Consultants,
-	      Facilitators, Managers, Trainers, and Coaches",
- publisher = "Jossey-Bass",
- year      =  2002,
- address   = "New York",
- edition   = "second edition"
+@inbook{schwartz,
+	author="Roger Schwartz",
+	title="The Skilled Facilitator",
+	chapter="5: Ground rules for effective groups",
+	publisher="Jossey-Bass",
+	year="1994"
 }
+
 
