--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -12,9 +12,9 @@
 	\pagestyle{plain}	%Stil på sammendrag og forord.
 	\pagenumbering{roman} 	%Sidetall på formen i, ii, osv. på sammendrag, forord og innholdsfortegnelse.
 
-	\sammendrag{Tekst som skal stå i sammendrag}
+	\sammendrag{Text in abstract}
 
-	\forord{Tekst som skal stå i forord}
+	\forord{Text in foreword}
 
 	\clearpage		%Ny side
 
