--- a/rapport/teori.tex
+++ b/rapport/teori.tex
@@ -1,39 +1,57 @@
-\chapter{Teori}
-\section{Det fysiske systemet}
-Det fysiske systemet som skal beskrives er en tynn, rektangulær plate med
-spekket svinekjøtt som utsettes for mikrobølgestråling med en effekt på rundt
-750 W. Det som skal modelleres er temperatur, faseoverganger for fett, og
-transport av fett.
+\chapter{Theory}
+\section{The physical system}
+The physical system to be modeled is a thin, rectangular strip of bacon which is
+subjected to approx. 750 watts of microwave radiation at the frequency of 2.4
+GHz. To be modeled is the heat in the strip, phase transitions and transport.
 
-\section{Differensiallikninger}
-De differensiallikningene som beskriver det fysiske systemet kan deles inn i to
-klasser: varmelikningen med kildeledd, og Navier-Stokes likning med kildeledd.
-Svinekjøttet deles inn i tre materialer: kjøtt, fast fett og flytende fett. Hver
-av disse materialene vil ha en egen varmelikning med ulike ledd, \cref{eq:temp}:
+\section{Our approach}
+\begin{figure}[!h]
+  \begin{center}
+    \includegraphics[width=0.8\linewidth]{physicists.png}
+  \end{center}
+  \caption{Our initial approach to the problem}
+  \label{fig:xkcd_physics}
+\end{figure}
+
+Initially, our approach to modelling was to use a staggered approach: first solve the
+heat equation for the three media meat, solid fat, and liquid fat, thus giving
+the temperature at step $n$. Then at step $n+1$, the temperature is regarded as
+known, and we solve the transport equation for liquid fat out of the bacon. Then
+we know the distribution of liquid fat at step $n+2$, where we solve the heat
+equations again, and we repeat ad nauseam.
+
+\section{Differential equations}
+The differential equations governing the heat are all variations of the heat
+equation, with various source terms, \cref{eq:temp}:
 \begin{align}
   \label{eq:temp}
   (\rho c_p)_m \pd{T}{t} - \alpha_m \grad{^2 T} &= J^{MW} \quad \rm{m,} \\
-  \eta_s (\rho c_p)_s \pd{T}{t} - \eta_s\alpha_s \grad{^2 T} &= J^{MW} - J^{Smelting}  \quad \rm{s,} \\
+  \eta_s (\rho c_p)_s \pd{T}{t} - \eta_s\alpha_s \grad{^2 T} &= J^{MW} - J^{Melt}  \quad \rm{s,} \\
   \eta_l (\rho c_p)_l \pd{T}{t} - \eta_s\alpha_l \grad{^2 T} - \eta_l(\rho c_p)_l(\v{v}\cdot
   \grad{})T &= J^{MW}  \quad \rm{l.}
 \end{align}
-Her står m for kjøtt (meat), s for fast fett, og l for flytende fett. $J^{MW}$
-er mikrobølgeovnene, representert som et kildeledd. Dette modelleres i første
-omgang som et sylindersymmetrisk effektivt ledd, med en radiell form gitt ved
-\cref{eq:effektfordeling},
+Here the subscript $m$ denotes meat, $s$ denotes solid fat, and $l$ denotes
+liquid fat. $J^{MW}$ is the source term representing the microwave oven.
+In the initial approach, this is modelled as a cylindrically symmetric term,
+with the radial power distribution on the form \cref{eq:effektfordeling},
 \begin{equation}
   J^{MW}(r) = 0.5 + 2.55008x - 0.588013x^2 + 0.032445x^3 + 0.00124411x^4 - 0.0000973516x^5 \rm{,}
   \label{eq:effektfordeling}
 \end{equation}
-altså et 5. gradspolynom. Dette er fra numeriske resultater fra \cite{huang+zhu}.
+i.e. a fifth degree polynomial, interpolated from the results in \cite{huang+zhu}.
 
-Videre har vi leddene $J^{Smelting}$ som er varmetapet på grunn av smelting av
-fast fett. Dette kan skrives på formen \[ \frac{L \rho}{T_2-T_1} \pd{T}{t}
-\rm{,} \quad T \in (T1,T2) \rm{,}\] der fettet smelter mellom temperaturene T1
-og T2. For $T \notin (T1,T2)$ er dette leddet null. Vi ser da at dette leddet kun
-blir en modifikasjon av konstanten foran $\pd{T}{t}$-leddet, og dermed ikke en
-stor komplikasjon.
+Furthermore, there is the term $J^{Melt}$ which represents heat loss due to
+latent heat in the solid-liquid phase transition. This can be written as 
+\[ \frac{L \rho}{T_2-T_1} \pd{T}{t} \rm{,} \quad T \in (T_1,T_2) \rm{,}\]
+where the fat is melting between the temperatures $T_1$ and $T_2$. For fat these
+are typically around 30-50$^\circ$C. For $T \notin (T1,T2)$ this term is zero,
+and it is readily seen that this is equivalent to a modification of the constant
+$c_{p,l}$ in \cref{eq:temp} when $T \in (T1,T2)$, thus it is not a serious
+complication.
 
-I den siste likningen har man også en konvektiv derivert, på formen $(\v{v}\cdot
-\grad{})T$. Dette representerer varme som transporteres 
+In the last of the heat equations, there also appears what is called a
+convective derivative, on the form $(\v{v}\cdot \grad{})T$. This is a somewhat
+more complicated term, and is essentially a modification due to transport of
+liquid fat implying an implicit transport of heat.
+
 
