--- a/rapport/numerikk.tex
+++ b/rapport/numerikk.tex
@@ -39,3 +39,45 @@ G &=& \frac{1-4D\sin^2{\frac{\beta h}{2}}}{1+4D\sin^2{\frac{\beta h}{2}}}
 
 \noindent Verdt å observere at så lenge $D > 0 \ \Rightarrow \ |G| \le 1$, slik at Crank-Nicolson-skjemaet er \emph{ubetinget stabilt} 
 
+\subsection{Truncation error}
+
+The Crank-Nicholson method is based on the trapezoidal rule. From the trapezoidal rule the truncation error is represented by
+
+\begin{equation*}
+\int_0^k f(t) dt = \frac{1}{2} k (f(0) - f(k)) -\frac{1}{12} k^3 f''(\frac{k}{2}) + ...
+\end{equation*}
+
+\noindent Using the formula
+
+\begin{equation*}
+	u(x_m,t_{n+1}) - u(x_m,t_n) = \int_{t_n} ^{t_{n+1}} u_t(x_m,t) dt
+\end{equation*}
+
+and approximating the integral by the trapezoidal rule, and abbreviate the notation $u_m^{n+1/2} = u(x_m,t_n+\frac{1}{2} k)$, one obtain
+
+\begin{eqnarray*}
+u_m^ {n+1} &=& u_m^ n + \frac{1}{2} k(\partial_t u_m^n + \partial_t u_m^{n+1}) - \frac{1}{2} k^3 \partial_t ^3 u_m^{n+\frac{1}{2}} \\
+		   &\stackrel{\text{\tiny heat eq.}}{=}&  u_m^ n + \frac{1}{2} k(\partial_x^2 u_m^n + \partial_y^2 u_m^n + \partial_z^2 u_m^n + \partial_x^2 u_m^{n+1} + \partial_y^2 u_m^{n+1} + \partial_z^2 u_m^{n+1}) - \frac{1}{2} k^3 \partial_t ^3 u_m^{n+\frac{1}{2}}
+\end{eqnarray*}
+
+Discretizing the double derivative with central differences, and denoting the step sizes in $x, y, z$ direction by $h, f, g$ respectively, gives
+
+\begin{eqnarray*}
+u_m^{n+1} &=&  u_m^ n + \frac{1}{2} k(\frac{1}{h^2}\delta_x^2 u_m^n + \frac{1}{f^2}\delta_y^2 u_m^n + \frac{1}{g^2}\delta_z^2 u_m^n + \frac{1}{h^2}\delta_x^2 u_m^{n+1} + \frac{1}{f^2}\delta_y^2 u_m^{n+1} + \frac{1}{g^2}\delta_z^2 u_m^{n+1}) \\
+ 		  &&- \frac{1}{2} k (\frac{1}{12}h^2\partial_x^4 u_m^n + \frac{1}{12}g^2\partial_y^4 u_m^n \frac{1}{12}f^2\partial_z^4 u_m^n + \frac{1}{12}h^2\partial_x^4 u_m^{n+1} + \frac{1}{12}g^2\partial_y^4 u_m^{n+1} \frac{1}{12}f^2\partial_z^4 u_m^{n+1} ) \\
+ 		  &&- \frac{1}{2} k^3 \partial_t ^3 u_m^{n+\frac{1}{2}} \\
+ 		  &=& u_m^n + \frac{r}{2}(\delta_x^2 u_m^n + \delta_x^2 u_m^{n+1}) + \frac{p}{2}(\delta_y^2 u_m^n + \delta_y^2 u_m^{n+1}) + \frac{q}{2}(\delta_z^2 u_m^n + \delta_z^2 u_m^{n+1}) + \tau_m^n
+\end{eqnarray*}
+
+where $r = k/h^2$, $p = k/f^2$, $q = k/g^2$, and $\tau_m^n$ is the truncation error times $k$. The expression for $\tau_m^n$ is
+
+\begin{equation*}
+\tau_m^n = -\frac{1}{12} k^3 \partial_t^2 u_m^{n+\frac{1}{2}} - \frac{1}{12} k h^2 \partial_x^4 u_m^{n+\frac{1}{2}} - \frac{1}{12} k g^2 \partial_y^4 u_m^{n+\frac{1}{2}} - \frac{1}{12} k f^2 \partial_z^4 u_m^{n+\frac{1}{2}}
+\end{equation*}
+
+where we have used $\frac{1}{2}(\partial_x^4 u_m^n + \partial_x^4 u_m^{n+}) = \partial_x^4 u_m^{n+\frac{1}{2}} + O(k^2)$. Hence, the truncation error is 
+
+\begin{eqnarray*}
+\frac{\tau_m^ n}{k} &=& -\frac{1}{12} k^2 \partial_t^2 u_m^{n+\frac{1}{2}} - \frac{1}{12} h^2 \partial_x^4 u_m^{n+\frac{1}{2}} - \frac{1}{12} g^2 \partial_y^4 u_m^{n+\frac{1}{2}} - \frac{1}{12} f^2 \partial_z^4 u_m^{n+\frac{1}{2}}\\
+					&=& O(k^2 + h^2 + g^2 + f^2)
+\end{eqnarray*}
