presentasjon midterm, to pdf-er

--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -26,7 +26,11 @@
 	\kapittelstil %Fikser stilen i kapitlene
 
 	\include{innledning} %Kap. 1
-	\include{medlemmer}  %Kap. 2
+	\include{medlemmer}  %Presentasjon av gruppemedlemmer
+	\include{teori}      %Introduksjon til relevant teori
+	\include{oppstart-utvikling} %Tilsvarende den ``røde delen'' på prosessrapport-presentasjonen.
+	\include{analyse}    %tilsvarende den brune delen
+	\include{oppsummering}
 
 	%Disse er copy-pasta fra rapporten Joakim fikk tak i,
 	%Bør sikkert endre navn, rekkefølge osv slik at det passer oss.
