--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -3,7 +3,7 @@
 Åsmund går i 4.klasse på studieretningen Teknisk Fysikk, med fordypning 
 i matematisk fysikk. Åsmund har jobbet med numerikk og fysikk på sin forrige 
 sommerjobb, og i tillegg gjør hans gode generelle kompetanse i fysikk at han 
-er godt skikket til å finne de riktige differensiallikningene som beskriver 
+er godt skikket til å finne de riktige differensiallikningene som beskriver
 det fysiske systemet som skal studeres.
 
 \subsection*{Innstilling til gruppearbeid}
@@ -15,7 +15,13 @@ innstilte på å gjøre en god jobb.
 
 \subsection*{Gruppa om Åsmund}
 
-Åsmund er \ldots
+Åsmund er gruppas fysiker. Han er flink til å ta initiativ og tar på seg mye.
+Det er meget lett å spørre Åsmund, da han er imøtekommende, ressurssterk og
+hjelpende av natur. I gruppearbeidet er han meget aktiv, men kan bli oppslukt i enkeltoppgaver og
+melder seg da litt ut av gruppa. Han har en rik form for humor som favner
+mye, noe som bidrar til god og avslappet stemning på gruppa. Åsmund er vårt
+ordensmenneske, som har oversikt over de ulike trådene og syr de sammen til det
+endelige resultate, både hva angår prosess og prosjekt.
 
 \person{Joakim}
 Jeg studerer sivilingeniør Bygg- og miljøteknikk, med
@@ -44,23 +50,35 @@ Slik at jeg har tatt litt del i det meste, noe jeg liker godt. Jeg prøver derfo
 å legge til rette for et godt gruppemiljø, da jeg anser det som vel så viktig.
 
 \subsection*{Gruppa om Joakim}
-
-%\subsection*{Grunnlag for landsbyvalg og forventninger til EiT}
-
-%\subsection*{Påvirker forventninger og kompetanse gruppearbeidet?}
-
-%\subsection*{Personlige forutsetninger}
+Joakim er gruppas humørspreder, og sørger for god stemning også når dagen blir
+lang og gruppa er sliten. Joakims egentlige fagbakgrunn er litt på siden av
+gruppas problemstilling, men han har vært veldig flink til å finne oppgaver som
+han får gjort. Han har også mye kompetanse på områder som han ikke har drevet så
+mye med, f.eks. numerikk og statistikk. Det at Joakim er en humørspreder gjør at 
+han av og til sporer av, men dette er i all hovedsak positivt for gruppa. Selv om 
+det går ut over den faglige produktiviteten der og da, har det bidratt til at 
+gruppa har blitt mye bedre kjent, og sannsynligvis også til å øke produktiviteten 
+på lang sikt.
 
 \person{Turid}
 Studerer ved industriell matematikk ved linja numerisk matematikk ved NTNU, med hovedvekt på numerisk matematikk. Har tidligere gått på folkehøgskole ved linja søm og design og handball. Var med på UKA-06 som kostymedesigner for revyen.
 
-\subsection*{Gruppearbeid}
+\subsection*{Innstilling til Gruppearbeid}
 Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse gruppene har midlertidig vært prega av en homogenitet i forhold til fag bakgrunn. Det har gjort at vi angriper nye problemstillinger med en lik tankegang, og vi mister evnen til å komme opp med mer kreative ideer til løsningsmetoder. De differansene som jeg har opplevd i samband av gruppearbeid, har ofte grunna i ulike personligheter og kommunikasjonstil. Da vi ikke har hatt noe opplæring i å takle ulike differanser og konflikter som disse ofte fører til, har disse differansene ofte hatt en negativ innvirkning på gruppearbeidet i form av uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten med å lære mer om sjølve gruppeprosessen og gruppedynamikk for å kunne takle slike situasjoner annerledes i framtida. Jeg trives vanligvis godt i grupper, og synes gruppearbeid kan være både fremende og utfordrende.  Jeg såg derfor fram til å jobbe i ei mer heterogen gruppe, med tanke på fag bakgrunn.
 
 
 \subsection*{Turid om sin rolle i gruppa}
 
 Jeg valgte landbyen MIA utifra min interesse for numerisk matematikk. Jeg falt dermed ganske naturlig inn i ei rolle med ansvar for den numeriske berekninger i prosjektet. Når det gjaldt arbeide rundt gruppeprosessen merka jeg fort at jeg fekk en noe kontrollerende og styrende rolle. Jeg følte selv at det var ei nødvendig  rolla for å holde effektiviteten og fokuset oppe i denne delen av gruppearbeidet. Jeg føler dermed at denne rollen i noe grad var ei rolle som blei tilegna meg av gruppa. Som eneste jente på gruppe merket jeg og en større forventing til meg når det gjaldt refleksjoner over gruppearbeidet. Jeg fekk dermed ofte rollen som observatør av gruppa, både i prosjektarbeid og ulike prosess øvinger. 
+
+\subsection*{Gruppa om Turid}
+Turid er ansvarsbevisst og har tatt mye initiativ for prosessdelen. Hun er en
+samlende faktor i gruppa, som kan hente oss inn når vi sporer av. Turid har vært
+involvert i mange av konfliktene på gruppa, muliggens fordi hun er jente,
+men også fordi hun gjerne vil få igjennom viljen sin. Turid kaller en spade for
+en spade, noe resten av gruppa setter pris på. Turid har vært aktiv i de aller
+fleste diskusjoner, og er flink til å delegere oppgaver og å passe på at alle
+har noe å gjøre.
 
 \person{Paul}
 Paul går i 4.klasse på studieretningen fysikk og matematikk, med spesialising i statistikk. Han har erfaring fra gruppearbeid fra prosjektoppgaver i statistikk, numerikk og matematisk modellering.
@@ -69,7 +87,24 @@ Paul går i 4.klasse på studieretningen fysikk og matematikk, med spesialising 
 Paul liker å ha oversikt over arbeidsoppgaver og at gruppa har en framdriftsplan. Han er nøye med det han gjør, og står på når han har fått en konkret arbeidsoppgave. Han er flink til å lytte til andres meninger, og kommer på ting som han kan bidra med i gruppa.
 
 \subsection*{Gruppa om Paul}
+Paul er en stillferdig person i gruppesammenheng, men på tomannshånd er han mer
+aktiv og vil presentere sin mening. Når en avgjørelse må tas i gruppa må han
+involveres mer aktivt enn noen av de andre medlemmene. Paul er flink til å ta 
+initiativ på det faglige, og veldig fokusert på oppgaven. Han koordinerer bra 
+med de andre medlemmene i forhold til sitt fagfelt, og er et positivt bidrag til
+gruppa. Hvis man gir Paul en oppgave, er man sikker på at den blir godt
+gjennomført og på tiden.
+
 
 \person{Knut Halvor}
 \lipsum[7-8]
+
+\subsection*{Gruppa om Knut Halvor}
+Knut Halvor er gruppas datamann, noe som definerer hans forhold til gruppa i
+stor grad. Han er flink til å bidra med sin kompetanse i diskusjoner, og står på
+sine meninger når man skal ta en avgjørelse som har å gjøre med hans fagfelt. På
+mange måter en Knut Halvor den mest faglig kritiske i gruppa. Det at han hovedsaklig
+jobber med programmering og er veldig selvstendig, er avgjørende for kvaliteten på 
+gruppas sluttresultat, men har også gjort at det tok lengre tid før gruppa ble godt 
+kjent med ham.
 
