Skrev personlig info i medlemmer.tex

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -95,9 +95,19 @@ med de andre medlemmene i forhold til sitt fagfelt, og er et positivt bidrag til
 gruppa. Hvis man gir Paul en oppgave, er man sikker på at den blir godt
 gjennomført og på tiden.
 
-
 \person{Knut Halvor}
-\lipsum[7-8]
+Knut Halvor studerer 4. året ved NTNU på linjen datateknikk. Studieretningen han 
+har valgt er komplekse datasystemer. Tidligere har han hatt både gode og dårlige
+erfaringer fra gruppearbeid. Det som går igjen fra gruppene han har hatt gode
+erfaringer med er at medlemmene er innstilte på og gjøre en god jobb, og at de
+har høye forventniger til hverandre.
+
+\subsection*{Innstilling til gruppearbeid}
+Jeg foretrekker og ha klare retningslinjer for hvilke oppgaver de forskjellige 
+medlemmene har i gruppen. På denne måten kan oppgaver og løsningsmetoder diskuteres,
+uten at de blir "overdiskutert". Selv om han foretrekker å alene ha ansvaret for sine oppgaver,
+foretrekker han og jobbe sammen med andre, da diskusjoner rundt problemstillinger og
+løsningsmetoder hjelper han å få organisert tankene sine.
 
 \subsection*{Gruppa om Knut Halvor}
 Knut Halvor er gruppas datamann, noe som definerer hans forhold til gruppa i
