Startet på implementasjon kapittelet

--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -29,9 +29,10 @@
 	\include{innledning} 	%Kap. 1
 	\include{teori}		%Kap. 2
 	\include{numerikk}	%Kap. 3
-	\include{eksperimenter} %Kap. 4
-	\include{numerikk_resultater} %Kap. 5
-	\include{konklusjon}	%Kap. 6
+	\include{implementasjon} %Kap. 4
+	\include{eksperimenter} %Kap. 5
+	\include{numerikk_resultater} %Kap. 6
+	\include{konklusjon}	%Kap. 7
 
 %Referanser:
 	\bibliographystyle{plain}
