endret rapport/main.tex til engelske navn

--- a/futhark.sty
+++ b/futhark.sty
@@ -72,10 +72,10 @@ Schoonderbeek Solberg, Paul Vo}}\\
 \drop = 2\baselineskip
 \centering
 \vspace*{\drop}
-{\Huge RESULTATER}\\[\drop]
+{\Huge RESULTS}\\[\drop]
 \wb\\[\drop]
-{\Large\itshape Numeriske Simuleringer og Eksperimenter med}\\[\baselineskip]
-{\Large STEKING AV BACON I MIKROBØLGEOVN}\\[\baselineskip]
+{\Large\itshape Numerical Simulations and Experiments with}\\[\baselineskip]
+{\Large BACON PREPARATION IN A MICROWAVE}\\[\baselineskip]
 \wb\\[\baselineskip]
 {\Large\itshape EiT - Matematikk Innen Anvendelser}\\[\baselineskip]
 {\Large gruppe 5 - FU\TH ARK - \textarn{futhark} - \wb}\par
