--- a/logger/logg11.tex
+++ b/logger/logg11.tex
@@ -23,9 +23,7 @@
 Dagen idag kan oppsummeres som en typisk jobbedag, hvor gruppa har vært delt
 store deler av dagen. Paul og Joakim behandlet data fra baconforsøk, mens
 Åsmund, Knut og Turid jobbet videre med programmet, endelig ser vi fornuftige
-resultater fra datamodellen. Kan nok si at dette underbygger poenget til Johnson
-\& Johnson om at heterogene grupper ofte er meget effektive og
-tilpasningsdyktige. 
+resultater fra datamodellen.
 
 Etter lunsj var det en meget god gruppeaktivitet i regi læringsassistentene.
 Gruppemedlemmene skulle ved hjelp av poeng, rangere seg selv og gruppemedlemmer
