--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -6,4 +6,10 @@
 	year="1994"
 }
 
-
+@inbook{jj,
+	author="David W. Johnson & Roger T. Johnson"
+	title="Multicultural Education and Human Relations: Valuing Diversity"
+	chapter="10: Valuing diversity"
+	publisher="Allyn & Bacon"
+	year="2001"
+}
