Skrevet endel av 'regler, avtaler og kontrakt'

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -11,8 +11,36 @@
 \section{Opprinnelig plan}
 \lipsum{5-6}
 
-\section{Regler, avtaler, kontrak}
-\lipsum{7-8}
+\section{Regler, avtaler, kontrakt}
+Nødvendigheten av å ha klare regler og avtaler innad i en gruppe diskuteres i
+mange av pensumartiklene. I \cite{schwarz} nevnes det som et av ni punktene
+avgjørende for en effektiv gruppe ``Etabler regler for hvordan avgjørerelser
+tas''. \cite{jj} påpeker hvor viktig det er at gruppa skaper seg en felles
+identitet, som hvert gruppemedlem kan samles bak. En samarabeidskontrakt, med
+regler for håndtering av konflikter etc., fungerer nettopp på dette viset -
+samlende. 
+
+Andre landsbydag var det satt av tid til å skrive samarbeidskontrakt. Det ble, i
+samsvar med læringsassistentene, satt opp punkter for hvordan gruppa skulle
+håndtere konflikter, ta avgjørelser og ikke minst - mål for gruppearbeid og
+tidsfrister. Etter noen uker ble kontrakten reforhandlet. Det viste seg at
+enkelte punkter var redundante, mens andre måtte legges til. Særs punktet om
+kaffemøtene før oppstart har vist seg effektivt, da det tilbyr en uhøytidelig
+stemning, hvor synspunkter kan drøftes under en uformell setting. Det ble i
+tillegg lagt merke til at gruppas enhetlige oversikt var manglende, og et nytt
+punkt vedrørende fremdriftsplaner ble lagt til. Et eksempel på et punkt som
+utgikk var at alle oppgaver skulle føres inn på gruppas wiki-side, dette
+overlappet til en viss grad med det nye om fremdriftsplan.
+
+Gruppa hadde også lagt merke til at punktet om tildelte oppgaver skulle føres
+inn på wiki-siden aldri ble brukt. At kun tre på gruppa (Joakim, Åsmund og Knut)
+hadde kjennskap til github (stedet hvor gruppa lagrer informasjon) kan til dels
+ta skylden for det, i tillegg påvirket mangelen av en fremdriftsplan hvert
+gruppemedlems oppfatning av egne arbeidsoppgaver. Etter som tiden gikk ble det,
+forståelig nok, endel murring fra Paul og Turid, som følte at det var vanskelig
+å følge utviklingen da de ikke kunne bruke github. Gruppa satte seg da ned en
+søndag og hadde innføring i det, med det resultat at hele gruppa endelig kunne
+bruke tjenesten fullt ut.
 
 \section{Beslutningsmønstre}
 \lipsum{9-10}
