--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -13,13 +13,13 @@ introduksjonen til kapittelet: ``All models are wrong; some are useful''.
 Schwarz setter opp tre kriterier for effektivt gruppearbeid:
 
 \begin{itemize}
-\item[Ytelse] Tjenesten eller produktet gruppen leverer møter (eller overgår)
+\item[\textsc{Ytelse}] Tjenesten eller produktet gruppen leverer møter (eller overgår)
 	forventningene og/eller kravene til de som skal bruke/motta/evaluere
 	tjenesten.
-\item[Prosess] Prosessene bak utførelsen av arbeidet vedlikeholder, eller
+\item[\textsc{Prosess}] Prosessene bak utførelsen av arbeidet vedlikeholder, eller
 forbedrer, gruppemedlemmenes mulighet til å samarbeide på videre
 arbeidsoppgaver.
-\item[Personlig] Gruppeerfaringen skal bidra til personlig vekst og god
+\item[\textsc{Personlig}] Gruppeerfaringen skal bidra til personlig vekst og god
 selvfølelse blant medlemmene.
 \end{itemize}
 
