--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -13,7 +13,7 @@
 
 \section{Regler, avtaler, kontrakt}
 Nødvendigheten av å ha klare regler og avtaler innad i en gruppe diskuteres i
-mange av pensumartiklene. I \cite{schwarz} nevnes det som et av ni punktene
+mange av pensumartiklene. I \cite{schwartz} nevnes det som et av ni punktene
 avgjørende for en effektiv gruppe ``Etabler regler for hvordan avgjørerelser
 tas''. \cite{jj} påpeker hvor viktig det er at gruppa skaper seg en felles
 identitet, som hvert gruppemedlem kan samles bak. En samarabeidskontrakt, med
