--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -7,9 +7,9 @@
 }
 
 @inbook{jj,
-	author="David W. Johnson & Roger T. Johnson"
+	author="David W. Johnson \& Roger T. Johnson"
 	title="Multicultural Education and Human Relations: Valuing Diversity"
 	chapter="10: Valuing diversity"
-	publisher="Allyn & Bacon"
+	publisher="Allyn \& Bacon"
 	year="2001"
 }
